--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
     <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-  <img src="assets/img/Kisutu-Logo-Round.png" alt="Kisutu Logo" class="header-logo-img">
+  <img src="assets/img/kisutu-logo-round.png" alt="Kisutu Logo" class="header-logo-img">
   <h1 class="sitename">KISUTU PRIMARY SCHOOL</h1>
 </a>
 
@@ -144,7 +144,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Teachers and Staff</h2>
         <div class="title-shape">
-          <svg viewBox="0 0 200 20" xmlns="http://www.w3.org/2000/svg">
+          <svg viewBox="0 0 200 20" xmlns="https://www.w3.org/2000/svg">
             <path d="M 0,10 C 40,0 60,20 100,10 C 140,0 160,20 200,10" fill="none" stroke="currentColor" stroke-width="2"></path>
           </svg>
         </div>
@@ -286,7 +286,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Kisutu Notice Board</h2>
         <div class="title-shape">
-          <svg viewBox="0 0 200 20" xmlns="http://www.w3.org/2000/svg">
+          <svg viewBox="0 0 200 20" xmlns="https://www.w3.org/2000/svg">
             <path d="M 0,10 C 40,0 60,20 100,10 C 140,0 160,20 200,10" fill="none" stroke="currentColor" stroke-width="2"></path>
           </svg>
         </div>
@@ -438,7 +438,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Parents' Square</h2>
         <div class="title-shape">
-          <svg viewBox="0 0 200 20" xmlns="http://www.w3.org/2000/svg">
+          <svg viewBox="0 0 200 20" xmlns="https://www.w3.org/2000/svg">
             <path d="M 0,10 C 40,0 60,20 100,10 C 140,0 160,20 200,10" fill="none" stroke="currentColor" stroke-width="2"></path>
           </svg>
         </div>
@@ -599,7 +599,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>What We Offer To Your Child</h2>
         <div class="title-shape">
-          <svg viewBox="0 0 200 20" xmlns="http://www.w3.org/2000/svg">
+          <svg viewBox="0 0 200 20" xmlns="https://www.w3.org/2000/svg">
             <path d="M 0,10 C 40,0 60,20 100,10 C 140,0 160,20 200,10" fill="none" stroke="currentColor" stroke-width="2"></path>
           </svg>
         </div>
@@ -664,7 +664,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Frequently Asked Questions</h2>
         <div class="title-shape">
-          <svg viewBox="0 0 200 20" xmlns="http://www.w3.org/2000/svg">
+          <svg viewBox="0 0 200 20" xmlns="https://www.w3.org/2000/svg">
             <path d="M 0,10 C 40,0 60,20 100,10 C 140,0 160,20 200,10" fill="none" stroke="currentColor" stroke-width="2"></path>
           </svg>
         </div>
